Design Working, Component Archtecture
* Default design work
  * scss work
* Component Architecture
  * Radio, Checkbox, Container, etc

--- a/serialize-state/src/front/index.html
+++ b/serialize-state/src/front/index.html
@@ -9,6 +9,6 @@
     <title>React + Webpack skeleton</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="react-app"></div>
   </body>
 </html>
